tree-sitter-emerald/grammar.js
const PREC = {
  assignment: 1,
  lambda: 2,
  pipe: 3,
  compose: 4,
  or: 5,
  and: 6,
  comparison: 7,
  bitwise_or: 8,
  bitwise_xor: 9,
  bitwise_and: 10,
  shift: 11,
  additive: 12,
  multiplicative: 13,
  power: 14,
  unary: 15,
  postfix: 16,
};

module.exports = grammar({
  name: 'emerald',

  extras: $ => [/\s/, $.comment],
  word: $ => $.identifier,
  supertypes: $ => [$.statement, $.expression, $.type],

  conflicts: $ => [
    [$.parenthesized_expression, $.lambda_expression],
    [$.tuple_expression, $.lambda_expression],
    [$.record_expression, $.dictionary_expression],
    [$.record_expression, $.set_expression],
    [$.block, $.record_expression, $.dictionary_expression],
    [$.record_type, $.record_expression],
    [$.generic_type, $.subscript_expression],
    [$.function_type, $.tuple_type],
    [$.expression, $.record_field],
    [$.declaration, $.expression, $.record_field],
    [$.expression_statement, $.set_comprehension],
    [$.expression_statement, $.set_expression],
    [$.literal_type, $.boolean],
    [$.literal_type, $.none],
    [$.literal_type, $.literal],
    [$.parameter, $.type, $.expression],
    [$.record_type, $.record_expression, $.dictionary_expression],
    [$.field_definition, $.expression, $.record_field],
    [$.literal_type, $.dimension],
    [$.type, $.dimension],
    [$.tuple_type],
    [$.type, $.expression],
    [$.parameter, $.expression],
    [$.expression, $.constructor_expression],
  ],

  rules: {
    source_file: $ => repeat(seq($.statement, optional(';'))),
    comment: _ => token(seq('#', /.*/)),

    statement: $ => choice(
      $.import_statement, $.function_definition, $.if_statement,
      $.while_statement, $.for_statement, $.match_statement,
      $.return_statement, $.break_statement, $.continue_statement,
      $.pass_statement, $.type_definition, $.error_definition,
      $.dimension_definition, $.const_declaration, $.declaration,
      $.assignment, $.augmented_assignment, $.block, $.expression_statement,
    ),

    import_statement: $ => choice(
      seq('import', field('module', $.dotted_name), optional(seq('as', field('alias', $.identifier)))),
      seq('from', field('module', $.dotted_name), 'import', commaSep1($.import_alias)),
    ),
    dotted_name: $ => seq($.identifier, repeat(seq('.', $.identifier))),
    import_alias: $ => seq(field('name', $.identifier), optional(seq('as', field('alias', $.identifier)))),

    function_definition: $ => seq(
      optional('pure'), 'def', field('name', $.identifier), optional($.type_parameters),
      field('parameters', $.parameters), optional(seq('->', field('return_type', $.type))),
      repeat(choice('pure', 'partial')), field('body', $.block),
    ),
    type_parameters: $ => seq('[', commaSep1($.type_parameter), optional(','), ']'),
    type_parameter: $ => seq(field('name', $.identifier), optional(seq(':', 'dim'))),
    parameters: $ => seq('(', optional(seq(commaSep1($.parameter), optional(','))), ')'),
    parameter: $ => seq(field('name', $.identifier), optional(seq(':', field('type', $.type))), optional(seq('=', field('default', $.expression)))),

    if_statement: $ => seq('if', field('condition', $.expression), field('consequence', $.block), repeat(seq(choice('elif', seq('else', 'if')), field('condition', $.expression), field('consequence', $.block))), optional(seq('else', field('alternative', $.block)))),
    while_statement: $ => seq('while', field('condition', $.expression), field('body', $.block)),
    for_statement: $ => seq('for', field('variable', choice($.identifier, $.wildcard)), 'in', field('iterable', $.expression), field('body', $.block)),
    match_statement: $ => seq('match', field('value', $.expression), '{', repeat1($.match_arm), '}'),
    match_arm: $ => seq(field('pattern', $.pattern), '->', field('body', $.block), optional(',')),
    pattern: $ => choice($.wildcard, $.identifier, $.literal, $.record_pattern),
    record_pattern: $ => seq('{', optional(seq(commaSep1($.pattern_field), optional(','))), '}'),
    pattern_field: $ => seq(field('name', $.identifier), optional(seq(':', field('pattern', $.pattern)))),
    wildcard: _ => '_',
    return_statement: $ => prec.right(seq('return', optional($.expression))),
    break_statement: _ => 'break',
    continue_statement: _ => 'continue',
    pass_statement: _ => 'pass',
    block: $ => seq('{', repeat(seq($.statement, optional(';'))), '}'),

    type_definition: $ => seq('type', field('name', $.identifier), optional($.type_parameters), '=', field('value', $.type)),
    error_definition: $ => prec.right(seq('error', field('name', $.identifier), optional(seq('{', optional(seq(commaSep1($.field_definition), optional(','))), '}')))),
    field_definition: $ => seq(field('name', $.identifier), ':', field('type', $.type)),
    dimension_definition: $ => seq('dim', commaSep1(field('name', $.identifier))),
    const_declaration: $ => seq('const', field('name', $.identifier), optional(seq(':', field('type', $.type))), '=', field('value', $.expression)),
    declaration: $ => seq(field('name', $.identifier), ':', field('type', $.type), '=', field('value', $.expression)),
    assignment: $ => prec.right(PREC.assignment, seq(field('left', $.assignment_target), '=', field('right', $.expression))),
    augmented_assignment: $ => prec.right(PREC.assignment, seq(field('left', $.assignment_target), field('operator', choice('+=', '-=', '*=', '/=', '%=')), field('right', $.expression))),
    assignment_target: $ => choice($.identifier, $.attribute_expression, $.subscript_expression),
    expression_statement: $ => $.expression,

    type: $ => choice($.union_type, $.intersection_type, $.primitive_type, $.generic_type, $.record_type, $.function_type, $.tuple_type, $.parenthesized_type, $.literal_type, $.identifier),
    union_type: $ => prec.left(seq($.type, '|', $.type)),
    intersection_type: $ => prec.left(seq($.type, '&', $.type)),
    primitive_type: _ => choice('int', 'float', 'str', 'bool', 'any', 'never', 'f32', 'f64'),
    generic_type: $ => prec(PREC.postfix, seq(field('name', $.identifier), '[', commaSep1(choice($.type, $.dimension)), optional(','), ']')),
    record_type: $ => seq('{', optional(seq(commaSep1($.field_definition), optional(','))), '}'),
    function_type: $ => prec.right(seq('(', optional(seq(commaSep1($.type), optional(','))), ')', '->', $.type)),
    tuple_type: $ => seq('(', $.type, ',', optional(seq(commaSep1($.type), optional(','))), ')'),
    parenthesized_type: $ => seq('(', $.type, ')'),
    literal_type: $ => choice($.integer, $.string, 'True', 'False', 'None', seq('-', $.integer)),
    dimension: $ => choice($.identifier, $.integer, prec.left(PREC.additive, seq($.dimension, '+', $.dimension)), prec.left(PREC.multiplicative, seq($.dimension, '*', $.dimension))),

    expression: $ => choice($.literal, $.identifier, $.lambda_expression, $.catch_expression, $.list_expression, $.tuple_expression, $.record_expression, $.constructor_expression, $.dictionary_expression, $.set_expression, $.list_comprehension, $.set_comprehension, $.dictionary_comprehension, $.parenthesized_expression, $.call_expression, $.subscript_expression, $.attribute_expression, $.unary_expression, $.binary_expression, $.f_string),
    literal: $ => choice($.integer, $.float, $.string, $.boolean, $.none, $.refl),
    integer: _ => token(/\d+/),
    float: _ => token(choice(/\d+\.\d*([eE][+-]?\d+)?/, /\d+[eE][+-]?\d+/)),
    string: $ => choice(seq('"', repeat(choice($.escape_sequence, token.immediate(/[^"\\]+/))), '"'), seq("'", repeat(choice($.escape_sequence, token.immediate(/[^'\\]+/))), "'")),
    escape_sequence: _ => token.immediate(seq('\\', /./)),
    boolean: _ => choice('True', 'False'),
    none: _ => 'None',
    refl: _ => 'refl',
    f_string: $ => choice(seq('f"', repeat(choice($.escape_sequence, $.interpolation, $.escaped_brace, token.immediate(/[^"\\{}]+/))), '"'), seq("f'", repeat(choice($.escape_sequence, $.interpolation, $.escaped_brace, token.immediate(/[^'\\{}]+/))), "'")),
    interpolation: $ => seq('{', $.expression, '}'),
    escaped_brace: _ => token.immediate(choice('{{', '}}')),

    lambda_expression: $ => prec.right(PREC.lambda, seq($.parameters, '=>', field('body', $.expression))),
    catch_expression: $ => prec.right(PREC.lambda, seq('catch', field('value', $.expression), '{', repeat1(seq($.catch_arm, optional(','))), '}')),
    catch_arm: $ => seq(field('error', choice($.identifier, $.wildcard)), optional(field('binding', $.identifier)), '->', field('value', $.expression)),
    list_expression: $ => seq('[', optional(seq(commaSep1($.expression), optional(','))), ']'),
    tuple_expression: $ => seq('(', $.expression, ',', optional(seq(commaSep1($.expression), optional(','))), ')'),
    parenthesized_expression: $ => seq('(', $.expression, ')'),
    record_expression: $ => seq('{', optional(seq(commaSep1($.record_field), optional(','))), '}'),
    constructor_expression: $ => prec(PREC.postfix, seq(field('type', $.identifier), '{', optional(seq(commaSep1($.record_field), optional(','))), '}')),
    record_field: $ => seq(field('name', $.identifier), ':', field('value', $.expression)),
    dictionary_expression: $ => seq('{', optional(seq(commaSep1($.dictionary_entry), optional(','))), '}'),
    dictionary_entry: $ => seq(field('key', $.expression), ':', field('value', $.expression)),
    set_expression: $ => seq('{', commaSep1($.expression), optional(','), '}'),
    list_comprehension: $ => seq('[', field('body', $.expression), $.comprehension_clause, ']'),
    set_comprehension: $ => seq('{', field('body', $.expression), $.comprehension_clause, '}'),
    dictionary_comprehension: $ => seq('{', field('key', $.expression), ':', field('value', $.expression), $.comprehension_clause, '}'),
    comprehension_clause: $ => seq('for', field('variable', $.identifier), 'in', field('iterable', $.expression), optional(seq('if', field('condition', $.expression)))),
    call_expression: $ => prec.left(PREC.postfix, seq(field('function', $.expression), '(', optional(seq(commaSep1($.argument), optional(','))), ')')),
    argument: $ => choice($.expression, seq(field('name', $.identifier), '=', field('value', $.expression))),
    subscript_expression: $ => prec.left(PREC.postfix, seq(field('value', $.expression), '[', field('subscript', choice($.expression, $.slice)), ']')),
    slice: $ => seq(optional($.expression), ':', optional($.expression), optional(seq(':', optional($.expression)))),
    attribute_expression: $ => prec.left(PREC.postfix, seq(field('object', $.expression), '.', field('attribute', $.identifier))),
    unary_expression: $ => prec.right(PREC.unary, seq(field('operator', choice('-', 'not', 'try')), field('argument', $.expression))),
    binary_expression: $ => choice(...[
      ['|>', PREC.pipe], ['>>', PREC.compose], ['or', PREC.or], ['and', PREC.and],
      ['==', PREC.comparison], ['!=', PREC.comparison], ['<', PREC.comparison], ['<=', PREC.comparison], ['>', PREC.comparison], ['>=', PREC.comparison], ['in', PREC.comparison],
      ['|', PREC.bitwise_or], ['^', PREC.bitwise_xor], ['&', PREC.bitwise_and], ['<<', PREC.shift], ['>>>', PREC.shift],
      ['+', PREC.additive], ['-', PREC.additive], ['*', PREC.multiplicative], ['/', PREC.multiplicative], ['//', PREC.multiplicative], ['%', PREC.multiplicative], ['**', PREC.power],
    ].map(([operator, precedence]) => prec.left(precedence, seq(field('left', $.expression), field('operator', operator), field('right', $.expression))))),
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
